add java param for gc info