@@ -3,4 +3,6 @@ if [ "$1" = "full" ]; then
   rake rawr:clean
 fi
 rake rawr:jar
-java -client -Xverify:none  -Xbootclasspath/a:lib/java/jruby-complete.jar -jar package/jar/compass-app.jar
+java -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Djruby.reify.classes=true \
+  -Xms64m -Xmn32m \
+-client -Xverify:none  -Xbootclasspath/a:lib/java/jruby-complete.jar -jar package/jar/compass-app.jar
